trace_processor: Add the ability to replay QEMU deterministic records
When instructed to "debug" a specific instruction number, the trace
processor will spawn a QEMU instance, regularly monitor its current
instruction number using the QEMU Monitor Port and report the status
over the IPC link. When the target instruction count is reached, it
spawns a gdb that attaches to the QEMU guest.

--- a/src/trace_processor/rpc/BUILD.gn
+++ b/src/trace_processor/rpc/BUILD.gn
@@ -41,6 +41,9 @@ source_set("rpc") {
     "../../protozero:proto_ring_buffer",
     "../util",
   ]
+  if (!is_wasm) {
+    deps += [ "../qemu" ]
+  }
   public_deps = [
     "../../../include/dejaview/ext/trace_processor/rpc:query_result_serializer",
   ]
