--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,8 @@
     "uuid": "^10.0.0",
     "vega": "^5.30.0",
     "vega-lite": "^5.23.0",
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
